--- a/tryg-app/docs/handoff-2025-12-17.md
+++ b/tryg-app/docs/handoff-2025-12-17.md
@@ -174,4 +174,12 @@ src/
 
 ---
 
+## Troubleshooting Cheat Sheet (Common Issues)
+| Issue | Potential Cause | Fix Reference |
+|-------|----------------|---------------|
+| Scroll is broken | `LivingBackground` active | `docs/LEARNINGS.md` |
+| Bottom nav floating | `absolute` instead of `sticky` | `src/components/BottomNavigation.tsx` |
+| Modal in wrong place | Orbit CSS Transforms | Use `createPortal` (see `SuperpowerBadge.tsx`) |
+| Missing archetype badge| Data source mismatch | Pass `memberStatuses` not `members` |
+
 *Handoff prepared: 2025-12-17 23:00 CET*
