feat: Add Livshistorier (Family Heirloom) audio recording feature

--- a/tryg-app/src/locales/bs.json
+++ b/tryg-app/src/locales/bs.json
@@ -146,5 +146,24 @@
     "i_feel_good": "Dobro sam",
     "i_feel_pain": "Imam bolove",
     "task_completed": "Završeno",
-    "symptom_log_item": "Simptom: {{label}}"
+    "symptom_log_item": "Simptom: {{label}}",
+    "text_answer": "Tekst",
+    "audio_answer": "Glas",
+    "audio_answer_placeholder": "🎙️ Audio snimak",
+    "tell_your_story_placeholder": "Pritisnite da ispričate priču",
+    "stop_recording": "Zaustavi",
+    "start_recording": "Snimaj",
+    "recording_active": "Snima se...",
+    "play_recording": "Pusti",
+    "delete_and_retry": "Obriši i ponovi",
+    "mic_permission_denied": "Pristup mikrofonu odbijen",
+    "mic_access_error": "Greška pri pristupu mikrofonu",
+    "audio_recorder_not_supported": "Snimanje zvuka nije podržano",
+    "livsbog_title": "Životna knjiga (Sjećanja)",
+    "no_memories_yet": "Još nema sjećanja",
+    "memories_will_appear_here": "Životne priče će se pojaviti ovdje",
+    "stories": "priče",
+    "untilted_memory": "Bez naslova",
+    "audio": "Audio",
+    "uploading": "Učitavanje..."
 }
