--- a/tryg-app/src/locales/da.json
+++ b/tryg-app/src/locales/da.json
@@ -146,5 +146,24 @@
     "i_feel_good": "Jeg har det godt",
     "i_feel_pain": "Jeg har ondt",
     "task_completed": "Udført",
-    "symptom_log_item": "Symptom: {{label}}"
+    "symptom_log_item": "Symptom: {{label}}",
+    "text_answer": "Skriv",
+    "audio_answer": "Fortæl",
+    "audio_answer_placeholder": "🎙️ Lydoptagelse",
+    "tell_your_story_placeholder": "Tryk for at fortælle din historie",
+    "stop_recording": "Stop optagelse",
+    "start_recording": "Start optagelse",
+    "recording_active": "Optager...",
+    "play_recording": "Afspil",
+    "delete_and_retry": "Slet og prøv igen",
+    "mic_permission_denied": "Mikrofonadgang nægtet",
+    "mic_access_error": "Fejl ved mikrofonadgang",
+    "audio_recorder_not_supported": "Lydoptagelse understøttes ikke",
+    "livsbog_title": "Livsbog (Minder)",
+    "no_memories_yet": "Ingen minder endnu",
+    "memories_will_appear_here": "Livshistorier vil dukke op her",
+    "stories": "historier",
+    "untilted_memory": "Uden titel",
+    "audio": "Lyd",
+    "uploading": "Uploader..."
 }
