--- a/tryg-app/src/locales/tr.json
+++ b/tryg-app/src/locales/tr.json
@@ -146,5 +146,24 @@
     "i_feel_good": "İyiyim",
     "i_feel_pain": "Ağrım var",
     "task_completed": "Tamamlandı",
-    "symptom_log_item": "Belirti: {{label}}"
+    "symptom_log_item": "Belirti: {{label}}",
+    "text_answer": "Metin",
+    "audio_answer": "Ses",
+    "audio_answer_placeholder": "🎙️ Ses kaydı",
+    "tell_your_story_placeholder": "Hikayenizi anlatmak için basın",
+    "stop_recording": "Durdur",
+    "start_recording": "Kaydet",
+    "recording_active": "Kaydediliyor...",
+    "play_recording": "Oynat",
+    "delete_and_retry": "Sil ve tekrar dene",
+    "mic_permission_denied": "Mikrofon izni reddedildi",
+    "mic_access_error": "Mikrofon erişim hatası",
+    "audio_recorder_not_supported": "Ses kaydı desteklenmiyor",
+    "livsbog_title": "Yaşam Defteri (Anılar)",
+    "no_memories_yet": "Henüz anı yok",
+    "memories_will_appear_here": "Yaşam hikayeleri burada görünecek",
+    "stories": "hikaye",
+    "untilted_memory": "Adsız",
+    "audio": "Ses",
+    "uploading": "Yükleniyor..."
 }
