feat(i18n): add translations for symptoms and gaming corner
- Added 45+ new translation keys across da.json, bs.json, tr.json
- Symptoms: body regions, severity levels, symptom names
- Gaming corner: Spillehjørnet title/subtitle, WordGame feedback
- Created getBodyRegions(), getSeverityLevels(), getSymptomsList() factory functions
- Updated BodyPainSelector.tsx with full i18n support
- Updated Spillehjoernet.tsx and WordGame.tsx with i18n support
- Kept static exports for backwards compatibility

Closes: i18n gaps in symptoms and gaming corner

--- a/tryg-app/src/locales/bs.json
+++ b/tryg-app/src/locales/bs.json
@@ -165,5 +165,45 @@
     "stories": "priče",
     "untilted_memory": "Bez naslova",
     "audio": "Audio",
-    "uploading": "Učitavanje..."
+    "uploading": "Učitavanje...",
+    "spillehjoernet_title": "Igraonica",
+    "spillehjoernet_subtitle": "Dnevna igra riječi s porodicom",
+    "word_game_complete": "Danas su riječi završene!",
+    "correct_answers": "tačnih odgovora",
+    "word_game_80_percent": "Fantastično! Ti si majstor riječi!",
+    "word_game_60_percent": "Dobro urađeno! Poznaješ svoje riječi.",
+    "word_game_below_60": "Dobar pokušaj! Probaj ponovo sutra.",
+    "word_of": "Riječ {{current}} od {{total}}",
+    "points": "bodova",
+    "what_does_mean": "Šta znači",
+    "answer_correct": "Potpuno tačno! 🎉",
+    "answer_wrong": "Ne baš...",
+    "word_means": "znači:",
+    "next_word": "Sljedeća riječ",
+    "symptom_pain": "Bol",
+    "symptom_dizzy": "Vrtoglavica",
+    "symptom_nausea": "Mučnina",
+    "symptom_fever": "Temperatura",
+    "symptom_sleep": "Problemi sa spavanjem",
+    "symptom_sweats": "Noćno znojenje",
+    "symptom_appetite": "Apetit",
+    "body_head": "Glava",
+    "body_neck": "Vrat",
+    "body_chest": "Prsa",
+    "body_back": "Leđa",
+    "body_stomach": "Stomak",
+    "body_left_arm": "Lijeva ruka",
+    "body_right_arm": "Desna ruka",
+    "body_left_leg": "Lijeva noga",
+    "body_right_leg": "Desna noga",
+    "severity_mild": "Malo",
+    "severity_moderate": "Umjereno",
+    "severity_severe": "Jako",
+    "pain_how_much": "Koliko boli u {{location}}?",
+    "select_location": "Izaberi {{label}}",
+    "pain_level_label": "Nivo boli: {{level}}",
+    "confirm": "Potvrdi",
+    "back": "Nazad",
+    "select_another_location": "Izaberi drugo mjesto",
+    "go_back_symptom_selection": "Vrati se na izbor simptoma"
 }
