--- a/tryg-app/src/locales/da.json
+++ b/tryg-app/src/locales/da.json
@@ -165,5 +165,45 @@
     "stories": "historier",
     "untilted_memory": "Uden titel",
     "audio": "Lyd",
-    "uploading": "Uploader..."
+    "uploading": "Uploader...",
+    "spillehjoernet_title": "Spillehjørnet",
+    "spillehjoernet_subtitle": "Dagens ordleg med familien",
+    "word_game_complete": "Dagens ord er klaret!",
+    "correct_answers": "rigtige svar",
+    "word_game_80_percent": "Fantastisk! Du er en ordmester!",
+    "word_game_60_percent": "Godt gået! Du kender dine ord.",
+    "word_game_below_60": "Godt forsøgt! Prøv igen i morgen.",
+    "word_of": "Ord {{current}} af {{total}}",
+    "points": "point",
+    "what_does_mean": "Hvad betyder",
+    "answer_correct": "Helt rigtigt! 🎉",
+    "answer_wrong": "Ikke helt...",
+    "word_means": "betyder:",
+    "next_word": "Næste ord",
+    "symptom_pain": "Smerter",
+    "symptom_dizzy": "Svimmel",
+    "symptom_nausea": "Kvalme",
+    "symptom_fever": "Feber",
+    "symptom_sleep": "Søvnbesvær",
+    "symptom_sweats": "Nattesved",
+    "symptom_appetite": "Appetit",
+    "body_head": "Hoved",
+    "body_neck": "Nakke",
+    "body_chest": "Bryst",
+    "body_back": "Ryg",
+    "body_stomach": "Mave",
+    "body_left_arm": "Venstre arm",
+    "body_right_arm": "Højre arm",
+    "body_left_leg": "Venstre ben",
+    "body_right_leg": "Højre ben",
+    "severity_mild": "Lidt",
+    "severity_moderate": "Noget",
+    "severity_severe": "Meget",
+    "pain_how_much": "Hvor ondt gør det i {{location}}?",
+    "select_location": "Vælg {{label}}",
+    "pain_level_label": "Smerte niveau: {{level}}",
+    "confirm": "Bekræft",
+    "back": "Tilbage",
+    "select_another_location": "Vælg et andet sted",
+    "go_back_symptom_selection": "Gå tilbage til symptomvalg"
 }
