--- a/tryg-app/src/locales/tr.json
+++ b/tryg-app/src/locales/tr.json
@@ -165,5 +165,45 @@
     "stories": "hikaye",
     "untilted_memory": "Adsız",
     "audio": "Ses",
-    "uploading": "Yükleniyor..."
+    "uploading": "Yükleniyor...",
+    "spillehjoernet_title": "Oyun Köşesi",
+    "spillehjoernet_subtitle": "Aile ile günlük kelime oyunu",
+    "word_game_complete": "Günün kelimeleri tamamlandı!",
+    "correct_answers": "doğru cevap",
+    "word_game_80_percent": "Harika! Sen bir kelime ustasısın!",
+    "word_game_60_percent": "İyi iş! Kelimelerini biliyorsun.",
+    "word_game_below_60": "İyi deneme! Yarın tekrar dene.",
+    "word_of": "Kelime {{current}} / {{total}}",
+    "points": "puan",
+    "what_does_mean": "Ne demek",
+    "answer_correct": "Tamamen doğru! 🎉",
+    "answer_wrong": "Tam değil...",
+    "word_means": "anlamı:",
+    "next_word": "Sonraki kelime",
+    "symptom_pain": "Ağrı",
+    "symptom_dizzy": "Baş dönmesi",
+    "symptom_nausea": "Mide bulantısı",
+    "symptom_fever": "Ateş",
+    "symptom_sleep": "Uyku problemi",
+    "symptom_sweats": "Gece terlemesi",
+    "symptom_appetite": "İştah",
+    "body_head": "Baş",
+    "body_neck": "Boyun",
+    "body_chest": "Göğüs",
+    "body_back": "Sırt",
+    "body_stomach": "Mide",
+    "body_left_arm": "Sol kol",
+    "body_right_arm": "Sağ kol",
+    "body_left_leg": "Sol bacak",
+    "body_right_leg": "Sağ bacak",
+    "severity_mild": "Az",
+    "severity_moderate": "Orta",
+    "severity_severe": "Çok",
+    "pain_how_much": "{{location}} ne kadar ağrıyor?",
+    "select_location": "{{label}} seç",
+    "pain_level_label": "Ağrı seviyesi: {{level}}",
+    "confirm": "Onayla",
+    "back": "Geri",
+    "select_another_location": "Başka yer seç",
+    "go_back_symptom_selection": "Belirti seçimine dön"
 }
