--- a/tryg-app/src/locales/da.json
+++ b/tryg-app/src/locales/da.json
@@ -10,8 +10,14 @@
     "medication_title": "Medicin",
     "pain_question": "Hvordan har du det?",
     "greeting_morning": "Godmorgen",
+    "greeting_morning_1": "Godmorgen, klar til en ny dag?",
+    "greeting_morning_2": "Godmorgen, håber du har sovet godt",
     "greeting_afternoon": "Goddag",
+    "greeting_afternoon_1": "Goddag, hvordan går det?",
+    "greeting_afternoon_2": "Goddag, håber du nyder dagen",
     "greeting_evening": "Godaften",
+    "greeting_evening_1": "Godaften, tid til ro og hygge",
+    "greeting_evening_2": "Godaften, en dejlig dag går på hæld",
     "bottom_nav_daily": "Min dag",
     "bottom_nav_family": "Familie",
     "bottom_nav_report": "Rapport",
