Feat: Implement Circadian Dark Mode with ThemeContext and manual override

--- a/tryg-app/src/locales/bs.json
+++ b/tryg-app/src/locales/bs.json
@@ -222,5 +222,9 @@
     "dashboard_symptoms": "⚠️ Novi simptomi",
     "dashboard_symptoms_sub": "Prijavljeno je {{count}} simptoma danas",
     "dashboard_tasks_missing": "Nedostaju zadaci",
-    "dashboard_tasks_missing_sub": "Provjerite današnje podsjetnike"
+    "dashboard_tasks_missing_sub": "Provjerite današnje podsjetnike",
+    "theme": "Izgled",
+    "theme_auto": "Automatski (Prati sunce)",
+    "theme_light": "Svijetlo",
+    "theme_dark": "Tamno"
 }
