feat(i18n): comprehensive translation sweep for privacy, recurring tasks, and match actions

--- a/tryg-app/src/locales/bs.json
+++ b/tryg-app/src/locales/bs.json
@@ -226,5 +226,34 @@
     "theme": "Izgled",
     "theme_auto": "Automatski (Prati sunce)",
     "theme_light": "Svijetlo",
-    "theme_dark": "Tamno"
+    "theme_dark": "Tamno",
+    "recurring": "Ponavljaj svaki dan",
+    "make_daily": "Ponavljaj svaki dan",
+    "privacy_title": "Privatnost & Podaci",
+    "privacy_pause_sharing": "Pauziraj dijeljenje",
+    "privacy_pause_on": "Vaša porodica ne može vidjeti vaše aktivnosti",
+    "privacy_pause_off": "Vaša porodica može vidjeti vaše aktivnosti",
+    "privacy_download_data": "Preuzmi moje podatke",
+    "privacy_download_desc": "Preuzmite kopiju svih vaših podataka",
+    "privacy_delete_account": "Obriši moj račun",
+    "privacy_delete_desc": "Trajno briše sve vaše podatke",
+    "privacy_confirm_title": "Jeste li sigurni?",
+    "privacy_confirm_desc": "Ovo će trajno obrisati sve vaše podatke, uključujući zadatke, simptome i vaš račun. Ovo se ne može poništiti.",
+    "privacy_cancel": "Otkaži",
+    "privacy_confirm_delete": "Da, obriši sve",
+    "privacy_deleting": "Brisanje...",
+    "privacy_error_relogin": "Morate se ponovo prijaviti da biste obrisali račun. Odjavite se i ponovo se prijavite.",
+    "privacy_error_generic": "Došlo je do greške. Pokušajte ponovo kasnije.",
+    "privacy_export_error": "Došlo je do greške pri izvozu podataka",
+    "privacy_info_storage": "Vaši podaci se čuvaju u EU (Frankfurt) i šifrirani su.",
+    "privacy_policy_link": "Pročitajte našu punu politiku privatnosti",
+    "match_task_call": "📞 Razgovor sa {{name}}",
+    "match_task_visit": "☕ Posjeta od {{name}}",
+    "match_task_meal": "🍳 Kuhanje sa {{name}}",
+    "match_task_transport": "🚗 Vožnja sa {{name}}",
+    "match_task_garden": "🌿 Vrtlarenje sa {{name}}",
+    "match_task_default": "Aktivnost sa {{name}}",
+    "match_task_call_relative": "📞 Nazovi {{name}}",
+    "match_task_visit_relative": "☕ Posjeti {{name}}",
+    "match_task_transport_relative": "🚗 Odvezi {{name}}"
 }
