--- a/tryg-app/src/locales/da.json
+++ b/tryg-app/src/locales/da.json
@@ -233,5 +233,34 @@
     "theme": "Udseende",
     "theme_auto": "Automatisk (Følg solen)",
     "theme_light": "Lyst",
-    "theme_dark": "Mørkt"
+    "theme_dark": "Mørkt",
+    "recurring": "Gentag dagligt",
+    "make_daily": "Gentag dagligt",
+    "privacy_title": "Privatliv & Data",
+    "privacy_pause_sharing": "Pause deling",
+    "privacy_pause_on": "Din familie kan ikke se dine aktiviteter",
+    "privacy_pause_off": "Din familie kan se dine aktiviteter",
+    "privacy_download_data": "Download mine data",
+    "privacy_download_desc": "Få en kopi af alle dine data",
+    "privacy_delete_account": "Slet min konto",
+    "privacy_delete_desc": "Sletter alle dine data permanent",
+    "privacy_confirm_title": "Er du sikker?",
+    "privacy_confirm_desc": "Dette vil permanent slette alle dine data, inklusiv opgaver, symptomer, og din konto. Dette kan ikke fortrydes.",
+    "privacy_cancel": "Annuller",
+    "privacy_confirm_delete": "Ja, slet alt",
+    "privacy_deleting": "Sletter...",
+    "privacy_error_relogin": "Du skal logge ind igen for at slette din konto. Log ud og log ind igen.",
+    "privacy_error_generic": "Der opstod en fejl. Prøv igen senere.",
+    "privacy_export_error": "Der opstod en fejl ved eksport af data",
+    "privacy_info_storage": "Dine data opbevares i EU (Frankfurt) og er krypteret.",
+    "privacy_policy_link": "Læs vores fulde privatlivspolitik",
+    "match_task_call": "📞 Ring med {{name}}",
+    "match_task_visit": "☕ Besøg fra {{name}}",
+    "match_task_meal": "🍳 Lav mad med {{name}}",
+    "match_task_transport": "🚗 Tur med {{name}}",
+    "match_task_garden": "🌿 Havearbejde med {{name}}",
+    "match_task_default": "Aktivitet med {{name}}",
+    "match_task_call_relative": "📞 Ring til {{name}}",
+    "match_task_visit_relative": "☕ Besøg hos {{name}}",
+    "match_task_transport_relative": "🚗 Kør {{name}}"
 }
