--- a/tryg-app/src/locales/tr.json
+++ b/tryg-app/src/locales/tr.json
@@ -226,5 +226,34 @@
     "theme": "Görünüm",
     "theme_auto": "Otomatik (Güneşi takip et)",
     "theme_light": "Açık",
-    "theme_dark": "Koyu"
+    "theme_dark": "Koyu",
+    "recurring": "Her gün tekrarla",
+    "make_daily": "Her gün tekrarla",
+    "privacy_title": "Gizlilik & Veriler",
+    "privacy_pause_sharing": "Paylaşımı duraklat",
+    "privacy_pause_on": "Ailen aktivitelerini göremez",
+    "privacy_pause_off": "Ailen aktivitelerini görebilir",
+    "privacy_download_data": "Verilerimi indir",
+    "privacy_download_desc": "Tüm verilerinizin bir kopyasını alın",
+    "privacy_delete_account": "Hesabımı sil",
+    "privacy_delete_desc": "Tüm verilerinizi kalıcı olarak siler",
+    "privacy_confirm_title": "Emin misiniz?",
+    "privacy_confirm_desc": "Bu işlem görevler, semptomlar ve hesabınız dahil tüm verilerinizi kalıcı olarak silecektir. Bu geri alınamaz.",
+    "privacy_cancel": "İptal",
+    "privacy_confirm_delete": "Evet, hepsini sil",
+    "privacy_deleting": "Siliniyor...",
+    "privacy_error_relogin": "Hesabınızı silmek için tekrar giriş yapmanız gerekiyor. Çıkış yapıp tekrar giriş yapın.",
+    "privacy_error_generic": "Bir hata oluştu. Daha sonra tekrar deneyin.",
+    "privacy_export_error": "Veri dışa aktarılırken bir hata oluştu",
+    "privacy_info_storage": "Verileriniz AB'de (Frankfurt) saklanır ve şifrelenir.",
+    "privacy_policy_link": "Gizlilik politikamızın tamamını okuyun",
+    "match_task_call": "📞 {{name}} ile ara",
+    "match_task_visit": "☕ {{name}}'den ziyaret",
+    "match_task_meal": "🍳 {{name}} ile yemek yap",
+    "match_task_transport": "🚗 {{name}} ile tur",
+    "match_task_garden": "🌿 {{name}} ile bahçe işi",
+    "match_task_default": "{{name}} ile etkinlik",
+    "match_task_call_relative": "📞 {{name}}'i ara",
+    "match_task_visit_relative": "☕ {{name}}'i ziyaret et",
+    "match_task_transport_relative": "🚗 {{name}}'i götür"
 }
