feat: 100% localization parity (DA/BS/TR) + Phase 8 AmbientTab plan
- Restored missing translation keys (role toggles, water notifications)
- Added warm greeting variations for all locales
- Fully localized HealthTab.tsx (health dashboard, symptom log, steps)
- Updated ARCHITECTURE.md, DEPENDENCIES.md, CHANGELOG.md, LEARNINGS.md
- Added Phase 8 (AmbientTab Unification) to implementation plan and tasks
- All build/lint checks pass

--- a/tryg-app/src/locales/bs.json
+++ b/tryg-app/src/locales/bs.json
@@ -10,12 +10,22 @@
     "medication_title": "Lijekovi",
     "pain_question": "Kako se osjećate?",
     "greeting_morning": "Dobro jutro",
+    "greeting_morning_1": "Dobro jutro – spremni za novi dan?",
+    "greeting_morning_2": "Dobro jutro, nadam se da ste dobro spavali",
     "greeting_afternoon": "Dobar dan",
+    "greeting_afternoon_1": "Dobar dan – kako ste?",
+    "greeting_afternoon_2": "Dobar dan, nadam se da uživate u danu",
     "greeting_evening": "Dobro veče",
+    "greeting_evening_1": "Dobra večer – vrijeme za odmor i ugodu",
+    "greeting_evening_2": "Dobra večer, lijep dan se bliži kraju",
     "bottom_nav_daily": "Moj dan",
     "bottom_nav_family": "Porodica",
     "bottom_nav_report": "Izvještaj",
     "bottom_nav_spil": "Igre",
+    "role_senior": "Pregled za seniora",
+    "role_relative": "Pregled za člana porodice",
+    "notification_water_title": "Ne zaboravite popiti vodu",
+    "notification_water_body": "Vrijeme je za vaš čaš vode u 10:00",
     "coffee_invite_title": "{{name}} zove na kafu!",
     "coffee_invite_sub": "Stavila je kafu i ima vremena za posjetu.",
     "coffee_invite_accept": "Svratiću",
@@ -204,6 +214,18 @@
     "pain_level_label": "Nivo boli: {{level}}",
     "confirm": "Potvrdi",
     "back": "Nazad",
+    "health_title": "Zdravlje i blagostanje",
+    "view_all": "Prikaži sve",
+    "chart_filter_hint": "Pritisnite na stubac za filtriranje",
+    "symptom_log_title": "Dnevnik simptoma",
+    "symptom_log_last_14_days": "(zadnjih 14 dana)",
+    "no_symptoms_recorded": "Nema registriranih simptoma.",
+    "symptoms_count_label": "simptoma",
+    "unknown": "Nepoznato",
+    "location_prefix": "Lokacija",
+    "intensity_prefix": "Intenzitet",
+    "health_steps": "Koraci",
+    "steps_avg": "prosjek",
     "select_another_location": "Izaberi drugo mjesto",
     "go_back_symptom_selection": "Vrati se na izbor simptoma",
     "daily_photo_title": "Danas slika",
