--- a/tryg-app/src/locales/da.json
+++ b/tryg-app/src/locales/da.json
@@ -23,6 +23,10 @@
     "bottom_nav_family": "Familie",
     "bottom_nav_report": "Rapport",
     "bottom_nav_spil": "Spil",
+    "role_senior": "Senior oversigt",
+    "role_relative": "Pårørende oversigt",
+    "notification_water_title": "Husk at drikke vand",
+    "notification_water_body": "Det er tid til dit glas vand kl. 10:00",
     "coffee_invite_title": "{{name}} giver kaffe!",
     "coffee_invite_sub": "Hun har sat kanden over og har tid til besøg.",
     "coffee_invite_accept": "Jeg kigger forbi",
@@ -211,6 +215,18 @@
     "pain_level_label": "Smerte niveau: {{level}}",
     "confirm": "Bekræft",
     "back": "Tilbage",
+    "health_title": "Sundhed & Velvære",
+    "view_all": "Vis alle",
+    "chart_filter_hint": "Tryk på en søjle for at filtrere",
+    "symptom_log_title": "Symptom Log",
+    "symptom_log_last_14_days": "(sidste 14 dage)",
+    "no_symptoms_recorded": "Ingen symptomer registreret.",
+    "symptoms_count_label": "symptomer",
+    "unknown": "Ukendt",
+    "location_prefix": "Lokation",
+    "intensity_prefix": "Intensitet",
+    "health_steps": "Skridt",
+    "steps_avg": "gennemsnit",
     "select_another_location": "Vælg et andet sted",
     "go_back_symptom_selection": "Gå tilbage til symptomvalg",
     "daily_photo_title": "Dagens Billede",
@@ -231,8 +247,6 @@
     "dashboard_tasks_missing": "Mangler opgaver",
     "dashboard_tasks_missing_sub": "Tjek op på dagens påmindelser",
     "theme": "Udseende",
-    "theme_auto": "Automatisk (Følg solen)",
-    "theme_light": "Lyst",
     "theme_dark": "Mørkt",
     "recurring": "Gentag dagligt",
     "make_daily": "Gentag dagligt",
