--- a/tryg-app/src/locales/tr.json
+++ b/tryg-app/src/locales/tr.json
@@ -10,12 +10,22 @@
     "medication_title": "İlaç",
     "pain_question": "Nasıl hissediyorsun?",
     "greeting_morning": "Günaydın",
+    "greeting_morning_1": "Günaydın – yeni bir güne hazır mısınız?",
+    "greeting_morning_2": "Günaydın, umarım iyi uyudunuz",
     "greeting_afternoon": "İyi Günler",
+    "greeting_afternoon_1": "İyi günler – nasılsınız?",
+    "greeting_afternoon_2": "İyi günler, umarım gününüz güzel geçiyordur",
     "greeting_evening": "İyi Akşamlar",
+    "greeting_evening_1": "İyi akşamlar – dinlenme ve huzur zamanı",
+    "greeting_evening_2": "İyi akşamlar, güzel bir gün sona eriyor",
     "bottom_nav_daily": "Günüm",
     "bottom_nav_family": "Aile",
     "bottom_nav_report": "Rapor",
     "bottom_nav_spil": "Oyunlar",
+    "role_senior": "Yaşlı Bakım Özeti",
+    "role_relative": "Akraba Özeti",
+    "notification_water_title": "Su içmeyi unutmayın",
+    "notification_water_body": "Saat 10:00'da su bardağınız için zamanı",
     "coffee_invite_title": "{{name}} kahve ikram ediyor!",
     "coffee_invite_sub": "Kahveyi hazırladı ve ziyarete zamanı var.",
     "coffee_invite_accept": "Uğrayacağım",
@@ -204,6 +214,18 @@
     "pain_level_label": "Ağrı seviyesi: {{level}}",
     "confirm": "Onayla",
     "back": "Geri",
+    "health_title": "Sağlık ve İyilik",
+    "view_all": "Tümünü Görüntüle",
+    "chart_filter_hint": "Filtrelemek için bir sütuna dokunun",
+    "symptom_log_title": "Semptom Günlüğü",
+    "symptom_log_last_14_days": "(son 14 gün)",
+    "no_symptoms_recorded": "Kayıtlı semptom yok.",
+    "symptoms_count_label": "semptom",
+    "unknown": "Bilinmeyen",
+    "location_prefix": "Konum",
+    "intensity_prefix": "Yoğunluk",
+    "health_steps": "Adımlar",
+    "steps_avg": "ortalama",
     "select_another_location": "Başka yer seç",
     "go_back_symptom_selection": "Belirti seçimine dön",
     "daily_photo_title": "Günün Fotoğrafı",
