fix: Icon stretching in exchange + warmer microcopy + cleanup duplicate locale keys

--- a/tryg-app/src/locales/da.json
+++ b/tryg-app/src/locales/da.json
@@ -51,7 +51,7 @@
     "daily_briefing_symptom_warning": "{{name}} har logget symptomer. Medicin: {{completed}}/{{total}} taget.",
     "daily_briefing_meds_missing": "{{name}} mangler {{count}} mediciner i dag.",
     "daily_briefing_checked_in": "{{name}} har tjekket ind i dag. Alt ser fint ud.",
-    "daily_briefing_no_activity": "Ingen aktivitet fra {{name}} endnu i dag.",
+    "daily_briefing_no_activity": "{{name}} hviler nok stadig – ingen aktivitet endnu.",
     "streak_msg_7": "🏆 {{count}}. dag i træk med alt medicin taget!",
     "streak_msg_3": "🎉 {{count}}. dag i træk!",
     "maybe_later": "Måske senere",
@@ -78,8 +78,8 @@
     "more": "mere",
     "others": "andre",
     "din_status": "Din status",
-    "waiting_first_check": "Venter på første tjek...",
-    "last_checked_in": "Sidst",
+    "waiting_first_check": "Vi venter på at sige hej...",
+    "last_checked_in": "Senest set",
     "taken": "ordnet",
     "you": "dig",
     "today": "I dag",
@@ -104,7 +104,7 @@
     "replies_count": "{{count}} svar",
     "reply_verb": "Svar",
     "write_reply_placeholder": "Skriv et svar...",
-    "no_answers_yet": "Ingen svar endnu. Vær den første!",
+    "no_answers_yet": "Ingen har svaret endnu – vær den første! 💬",
     "open_weekly_question": "Åbn ugens spørgsmål",
     "symptoms_today_count": "Symptomer i dag ({{count}})",
     "be_the_first": "Vær den første!",
@@ -141,7 +141,7 @@
     "stable_symptoms_msg": "{{count}} symptomer denne uge",
     "symptoms_this_week": "{{count}} symptomer denne uge",
     "see_full_history": "Se fuld symptom-historik →",
-    "no_activity_yet": "Ingen aktivitet endnu",
+    "no_activity_yet": "Roligt herinde – ingen aktivitet endnu",
     "add_own_task": "Tilføj egen opgave",
     "completed_tasks_count_special": "Udførte opgaver ({{count}})",
     "time_period_morning": "Morgen",
@@ -170,9 +170,9 @@
     "mic_permission_denied": "Mikrofonadgang nægtet",
     "mic_access_error": "Fejl ved mikrofonadgang",
     "audio_recorder_not_supported": "Lydoptagelse understøttes ikke",
-    "livsbog_title": "Livsbog (Minder)",
-    "no_memories_yet": "Ingen minder endnu",
-    "memories_will_appear_here": "Livshistorier vil dukke op her",
+    "livsbog_title": "Livsbog ❤️",
+    "no_memories_yet": "Her vil dine minder blomstre...",
+    "memories_will_appear_here": "Livshistorier samles her med tiden",
     "stories": "historier",
     "untilted_memory": "Uden titel",
     "audio": "Lyd",
@@ -220,7 +220,7 @@
     "chart_filter_hint": "Tryk på en søjle for at filtrere",
     "symptom_log_title": "Symptom Log",
     "symptom_log_last_14_days": "(sidste 14 dage)",
-    "no_symptoms_recorded": "Ingen symptomer registreret.",
+    "no_symptoms_recorded": "Ingen symptomer – godt gået! ✨",
     "symptoms_count_label": "symptomer",
     "unknown": "Ukendt",
     "location_prefix": "Lokation",
@@ -278,13 +278,8 @@
     "match_task_visit_relative": "☕ Besøg hos {{name}}",
     "match_task_transport_relative": "🚗 Kør {{name}}",
     "time_days_ago_short": "{{count}} dage siden",
-    "today": "I dag",
-    "task_completed": "Udført",
-    "symptom_log_item": "Symptom: {{label}}",
-    "no_activity_yet": "Ingen aktivitet endnu",
     "theme_auto": "Auto",
     "theme_light": "Lys",
-    "theme_dark": "Mørk",
     "general": "Generelt",
     "privacy_data": "Privatliv & data",
     "seneste_aktivitet": "Seneste aktivitet"
